--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span>→</span>
                 </a>
                 <a href="#" class="btn-primary secondary">
-                    <span>Visite virtuelle</span>
+                    <span id=""><button id="openModalBtn" >Visite Virtuelle</button></span>
                     <span><i class="fa-solid fa-video"></i></span>
                 </a>
             </div>
@@ -224,7 +224,7 @@
 
 
 <!-- Bouton visite virtuelle -->
-<button id="openModalBtn" class="visit-virtual-btn">Visite Virtuelle</button>
+<!-- <button id="openModalBtn" class="visit-virtual-btn">Visite Virtuelle</button> -->
 
 <!-- Modal -->
 <div id="videoModal" class="modal">
