--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero" id="accueil">
         <div class="hero-content">
             <h1>Formez-vous pour l'Excellence</h1>
-            <p>Notre école offre des formations de qualité supérieure avec un accompagnement personnalisé pour votre réussite professionnelle.</p>
+            <p>Notre objectif est d’offrir à chaque élève un parcours éducatif complet et harmonieux, de la petite enfance à la préparation aux études supérieures, dans un environnement sécurisé et stimulant.</p>
             <a href="#contact" class="cta-button">Nous Contacter</a>
         </div>
     </section>
@@ -42,9 +42,18 @@
         <div class="about-content">
             <div class="about-text">
                 <h3>Notre Mission</h3>
-                <p>Depuis plus de 20 ans, notre école s'engage à fournir une éducation de qualité exceptionnelle. Nous préparons nos étudiants aux défis du monde professionnel avec des méthodes pédagogiques innovantes et un encadrement personnalisé.</p>
+                <p>Notre établissement scolaire
+Notre école propose un parcours éducatif complet, allant du primaire au lycée, pour accompagner chaque élève tout au long de sa scolarité.
+
+Au primaire, nous offrons un environnement chaleureux et stimulant où les enfants acquièrent les bases essentielles : lecture, écriture, calcul, découverte du monde et développement personnel.
+
+Au collège, nous consolidons ces acquis tout en ouvrant les élèves à de nouvelles disciplines, encourageant la curiosité, la réflexion et l’autonomie.
+
+Au lycée, nous préparons nos jeunes à relever les défis de l’avenir grâce à des programmes exigeants, adaptés à leurs ambitions, qu’elles soient orientées vers les études supérieures ou l’insertion professionnelle.
+
+Avec des enseignants passionnés, des infrastructures modernes et un suivi personnalisé, notre établissement assure une formation de qualité dans un cadre propice à l’épanouissement et à la réussite.</p>
                 
-                <p>Notre équipe d'enseignants qualifiés et notre infrastructure moderne garantissent un environnement d'apprentissage optimal pour tous nos étudiants.</p>
+                <!-- <p>Notre équipe d'enseignants qualifiés et notre infrastructure moderne garantissent un environnement d'apprentissage optimal pour tous nos étudiants.</p> -->
             </div>
             <div class="about-image">
                 <!-- [Image de l'école] -->
