--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <div class="logo">École Excellence</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#about">À Propos</a></li>
-                <li><a href="#programs">Formations</a></li>
-                <li><a href="#gallery">Galerie</a></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="second.html">Details</a></li>
+                <!-- <li><a href="#programs">Formations</a></li>
+                <li><a href="#gallery">Galerie</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-toggle" id="menuToggle">
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
+   
     <section class="hero" id="accueil">
         <div class="hero-content">
             <h1>Formez-vous pour l'Excellence</h1>
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+
     <section class="section" id="about">
         <h2>À Propos de Notre École</h2>
         <div class="about-content">
@@ -56,12 +56,11 @@ Avec des enseignants passionnés, des infrastructures modernes et un suivi perso
                 <!-- <p>Notre équipe d'enseignants qualifiés et notre infrastructure moderne garantissent un environnement d'apprentissage optimal pour tous nos étudiants.</p> -->
             </div>
             <div class="about-image">
-                <!-- [Image de l'école] -->
+               
             </div>
         </div>
     </section>
 
-    <!-- Programs Section -->
     <section class="section programs" id="programs">
         <h2>Nos Formations</h2>
         <div class="programs-grid">
@@ -85,7 +84,7 @@ Avec des enseignants passionnés, des infrastructures modernes et un suivi perso
         </div>
     </section>
 
-    <!-- Stats Section -->
+   
     <section class="section stats">
         <h2>Nos Résultats</h2>
         <div class="stats-grid">
@@ -108,7 +107,7 @@ Avec des enseignants passionnés, des infrastructures modernes et un suivi perso
         </div>
     </section>
 
-    <!-- Gallery Section -->
+   
     <section class="section gallery" id="gallery">
         <h2>Galerie Photos</h2>
         <div class="gallery-grid">
