--- a/second.html
+++ b/second.html
@@ -226,8 +226,9 @@
     </section>
 
     <!-- FOOTER -->
-    <footer>
+     <footer>
         <p>&copy; 2025 École Excellence. Tous droits réservés.</p>
+        <p>Formation d'excellence pour un avenir professionnel réussi</p>
     </footer>
 
     <script>
